fixing some layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,23 @@
 .grid-container {
-
   border-radius: 5%;
   margin-left: 2%;
   margin-right: 2%;
   padding-top: 3%;
   margin-top: 5%;
+  padding-bottom: 3%;
+  margin-bottom: 5%;
   background-color: rgb(144, 223, 187);
-
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr auto;
   gap: 5%; /* Adjust the gap between grid items as needed */
+   /* Adjust the height to ensure it doesn't overlap the footer */
 }
 
 /* Adjust the grid layout for medium screens */
 @media (max-width: 1024px) {
   .grid-container {
+    
     grid-template-columns: repeat(3, 1fr); /* 3 columns for medium screens */
     grid-template-rows: repeat(4, 1fr); /* Adjust rows as needed */
   }
@@ -52,6 +54,8 @@ header {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   max-width: 100%;
   overflow-x: hidden;
   padding: 0;
@@ -60,8 +64,17 @@ body {
 
 footer {
   text-align: center;
-
+  padding: 1rem;
   margin-top: auto;
   height: 50px;
   background-color: rgb(0, 125, 68);
+}
+
+
+.grid-item {
+ 
+ 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Subtle shadow for a 3D effect */
+  overflow: hidden; /* Prevent content from overflowing */
+  box-sizing: border-box; /* Include padding and border in the element's total width and height */
 }
